// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moderation actioning resolves reports on missing repos and records. 1`] = `
Object {
  "recordActionDetail": Object {
    "action": "com.atproto.admin.defs#flag",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 4,
    "reason": "Y",
    "resolvedReports": Array [
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 8,
        "reason": "defamation",
        "reasonType": "com.atproto.moderation.defs#reasonOther",
        "reportedBy": "user(1)",
        "resolvedByActionIds": Array [
          4,
        ],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
      },
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 7,
        "reasonType": "com.atproto.moderation.defs#reasonSpam",
        "reportedBy": "user(2)",
        "resolvedByActionIds": Array [
          4,
        ],
        "subject": Object {
          "$type": "com.atproto.admin.defs#repoRef",
          "did": "user(0)",
        },
      },
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#recordViewNotFound",
      "uri": "record(0)",
    },
    "subjectBlobs": Array [],
  },
  "repoDeletionActionDetail": Object {
    "action": "com.atproto.admin.defs#takedown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "id": 3,
    "reason": "ACCOUNT DELETION",
    "resolvedReports": Array [],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoViewNotFound",
      "did": "user(0)",
    },
    "subjectBlobs": Array [],
  },
  "reportADetail": Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 7,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(2)",
    "resolvedByActions": Array [
      Object {
        "action": "com.atproto.admin.defs#flag",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 4,
        "reason": "Y",
        "resolvedReportIds": Array [
          8,
          7,
        ],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoViewNotFound",
      "did": "user(0)",
    },
  },
  "reportBDetail": Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 8,
    "reason": "defamation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(1)",
    "resolvedByActions": Array [
      Object {
        "action": "com.atproto.admin.defs#flag",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 4,
        "reason": "Y",
        "resolvedReportIds": Array [
          8,
          7,
        ],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#recordViewNotFound",
      "uri": "record(0)",
    },
  },
}
`;

exports[`moderation actioning resolves reports on repos and records. 1`] = `
Object {
  "action": "com.atproto.admin.defs#takedown",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "id": 2,
  "reason": "Y",
  "resolvedReportIds": Array [
    6,
    5,
  ],
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoRef",
    "did": "user(0)",
  },
  "subjectBlobCids": Array [],
}
`;

exports[`moderation reporting creates reports of a record. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 3,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 4,
    "reason": "defamation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(1)",
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
  },
]
`;

exports[`moderation reporting creates reports of a repo. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reason": "impersonation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(2)",
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
]
`;
